Trilha atual na tela do aluno

--- a/views/admin/students/previus.ejs
+++ b/views/admin/students/previus.ejs
@@ -17,14 +17,14 @@
                 <a class="nav-link" href="">Próximas trilhas</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link active disable" href="">Trilhas anteriores</a>
+                <a class="nav-link active" href="/admin/student/lastTrails/<%= student.id %>">Trilhas anteriores</a>
             </li>
         <% }%>
         <li class="nav-item">
-            <a class="nav-link" href="/admin/trails/howMany/<%= student.id %>">Cadastrar nova trilha</a>
+            <a class="nav-link" href="/admin/student/planning/<%=student.id %>">Planejamento</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="/admin/student/planning/<%=student.id %>">Planejamento</a>
+            <a class="nav-link" href="/admin/trail/howMany/<%= student.id %>">Cadastrar nova trilha</a>
         </li>
         <% if(automaticTrail){%>
             <li class="nav-item">
